RESOLVED FIXED211299
TestWebKitAPI.WebKit.CustomDisplayName is a flaky timeout
https://bugs.webkit.org/show_bug.cgi?id=211299
Summary TestWebKitAPI.WebKit.CustomDisplayName is a flaky timeout
Attachments
Patch (2.37 KB, patch)
2020-05-01 15:52 PDT, Alex Christensen
no flags
Patch (2.09 KB, patch)
2020-05-04 13:05 PDT, Alex Christensen
no flags
Patch (2.28 KB, patch)
2020-05-04 15:19 PDT, Alex Christensen
no flags
Patch (3.10 KB, patch)
2020-05-04 16:04 PDT, Alex Christensen
no flags
Radar WebKit Bug Importer
Comment 1 2020-05-01 10:22:05 PDT
Alex Christensen
Comment 2 2020-05-01 15:52:21 PDT
EWS
Comment 3 2020-05-04 11:00:50 PDT
Committed r261090: <https://trac.webkit.org/changeset/261090> All reviewed patches have been landed. Closing bug and clearing flags on attachment 398255 [details].
Alex Christensen
Comment 4 2020-05-04 12:52:25 PDT
This test still times out on the bots sometimes after this fix.
Alex Christensen
Comment 5 2020-05-04 13:05:58 PDT
EWS
Comment 6 2020-05-04 14:04:27 PDT
Committed r261112: <https://trac.webkit.org/changeset/261112> All reviewed patches have been landed. Closing bug and clearing flags on attachment 398404 [details].
Alex Christensen
Comment 7 2020-05-04 15:19:06 PDT
Reopening to attach new patch.
Alex Christensen
Comment 8 2020-05-04 15:19:08 PDT
Chris Dumez
Comment 9 2020-05-04 15:41:55 PDT
Comment on attachment 398425 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=398425&action=review > Source/WebKit/WebProcess/WebPage/Cocoa/WebPageCocoa.mm:301 > + dispatch_async(dispatch_get_global_queue(QOS_CLASS_BACKGROUND, 0), makeBlockPtr([completionHandler = WTFMove(completionHandler)] () mutable { I think the issue is that dispatch_get_global_queue() returns a concurrent queue, not a serial queue, so ordering is not guaranteed.
Alex Christensen
Comment 10 2020-05-04 16:04:30 PDT
EWS
Comment 11 2020-05-04 21:50:34 PDT
Committed r261145: <https://trac.webkit.org/changeset/261145> All reviewed patches have been landed. Closing bug and clearing flags on attachment 398429 [details].
Alex Christensen
Comment 12 2020-05-04 23:33:25 PDT
results.webkit.org indicates this is fixed! hooray!
Note You need to log in before you can comment on or make changes to this bug.