TestWebKitAPI.WebKit.CustomDisplayName is a flaky timeout https://bugs.webkit.org/show_bug.cgi?id=211299

Patch by Alex Christensen <achristensen@webkit.org> on 2020-05-04
Reviewed by Darin Adler.

The application name is being set on a background queue, but there's nothing actually keeping the NSString alive.
This may fix some timeouts we were seeing.  I wonder why ASAN or guard malloc didn't catch this yet.

* WebProcess/cocoa/WebProcessCocoa.mm:
(WebKit::WebProcess::updateProcessName):

Canonical link: https://commits.webkit.org/224265@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261090 268f45cc-cd09-0410-ab3c-d52691b4dbfc